--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,20 @@
-on: push
-name: 🚀 Deploy website on push
-jobs:
-  web-deploy:
-    name: 🎉 Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v3
+# on: push
+# name: 🚀 Deploy website on push
+# jobs:
+#   web-deploy:
+#     name: 🎉 Deploy
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: 🚚 Get latest code
+#       uses: actions/checkout@v3
     
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      with:
-        # server: ftp.dbvertex.com
-        # username: Electricalvehical@dbvertex.com
-        # password: ${{ secrets.vehical_ftp_password }}
-        server: ftp.dbvertex.com
-        username: Electricalvehical@dbvertex.com
-        password: ${{ secrets.vehical_ftp_password }}
+#     - name: 📂 Sync files
+#       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+#       with:
+#         # server: ftp.dbvertex.com
+#         # username: Electricalvehical@dbvertex.com
+#         # password: ${{ secrets.vehical_ftp_password }}
+#         server: ftp.dbvertex.com
+#         username: Electricalvehical@dbvertex.com
+#         password: ${{ secrets.vehical_ftp_password }}
 
